SERVER-5033: Do not require auth in the context in which db profiles are captured.

By virtue of being enabled, the mongod query profiler ought to be authorized to write to profile
data collections.  This change makes that so, rather than depending on the authorization state of
the connection.  This will also allow queries by read-only users to be profiled.